# underwriting-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  create_demo_data.py  generate_docs.py  main.py  pyproject.toml  summary.md
docs/: SCREENSHOT.md
src/: orchestrator.py
src/agents/: base_agent.py  consistency_checker.py  customer_comms.py  dashboard_compiler.py  document_authenticator.py  document_collector.py  financial_verifier.py  kyc_verifier.py  property_verifier.py
src/api/: app.py
src/api/templates/: dashboard.html  index.html
src/mocks/: aadhaar_api.py  account_aggregator.py  cibil_api.py  land_registry.py  pan_api.py
src/models/: application.py  decisions.py  documents.py
tests/test_agents/: test_document_collector.py
tests/test_mocks/: test_mock_apis.py
